CSS fixed, was reaching one level too high in file structure. Added elements to index and score html files.

--- a/assets/style.css
+++ b/assets/style.css
@@ -1,3 +1,8 @@
 .font {
-    color: blue;
+    font-family:'Noto Sans JP', sans-serif;
+    color: black;
+}
+
+#start {
+    
 }
